k8s-yamls-master/k8s-yamls-master/live/cadev/victoriametrics/4-ing-vminsert.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required - admin
    nginx.ingress.kubernetes.io/auth-secret: victoriametrics-basic-auth
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/client-body-buffer-size: 10m
  name: vminsert
  namespace: victoriametrics
spec:
  ingressClassName: nginx
  rules:
  - host: k8cadev.medimpact.com
    http:
      paths:
      - pathType: Prefix
        path: /vminsert/?(.*)
        backend:
          service:
            name: victoria-metricscluster-vminsert
            port:
              number: 8480
  tls:
  - hosts:
    - k8cadev.medimpact.com
